--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,15 +1,15 @@
 ---
-title: Dreams
-subtitle: Website Design
+title: Employee of the Year
+subtitle: 2019-2020
 layout: default
 modal-id: 1
-date: 2014-07-18
-img: dreams.png
-thumbnail: dreams-thumbnail.png
+date: 2020-01-10
+img: emp_year_2019_1.JPG
+thumbnail: emp_year_2019_1.JPG
 alt: image-alt
-project-date: April 2014
+project-date: January 2020
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Awarded Employee of the year for Outstanding Performance for the year 2018 - 2019.
 
 ---
