--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,15 +1,15 @@
 ---
-title: Escape
-subtitle: Website Design
+title: Project of the Year
+subtitle: 2018 - 2019
 layout: default
 modal-id: 2
-date: 2014-07-17
-img: escape.png
-thumbnail: escape-thumbnail.png
+date: 2019-01-10
+img: emp_year_2019_1.JPG
+thumbnail: emp_year_2019_1.JPG
 alt: image-alt
-project-date: April 2014
+project-date: January 2019
 client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+category: Best Successful Project
+description: Based on the overall achievements & fast progress of our project, Me along with my teammates were awarded the Project of the year during the Annual Day celebrated at Samsung-Delhi. 
 
 ---
