--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -4,7 +4,7 @@ subtitle: 2019 - 2020
 layout: default
 modal-id: 1
 date: 2020-01-10
-img: emp_year_2019_1.JPG
+img: Emp Year 02.jpg
 thumbnail: emp_year_2019_1.JPG
 alt: image-alt
 project-date: January 2020
