--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -3,12 +3,12 @@ title: Employee of the Year
 subtitle: 2019 - 2020
 layout: default
 modal-id: 1
-date: 2020-01-10
+date: 2021-01-10
 img: Emp Year 02.jpg
 thumbnail: emp_year_2019_1.JPG
 alt: image-alt
-project-date: January 2020
-client: Start Bootstrap
+project-date: December 2019
+client: Samsung
 category: Smart At Work
 description: Awarded Employee of the year for being Smart At Work for the year 2018 - 2019.
 
