--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -3,13 +3,13 @@ title: Hybrid Image Encryption
 subtitle: Publication
 layout: default
 modal-id: 5
-date: 2014-07-14
+date: 2015-12-21
 img: IEEE Akash Jain 2.jpg
 thumbnail: IEEE Akash Jain 2.jpg
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+project-date: December 2015
+client: -
+category: IEEE
+description: During college time, me and my classmate wrote a publication on how we can use an amalgamation of simple techniques like PseudoRandom Numbers, transposition & substitution to make strong image encryption algorithm.
 
 ---
