--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -7,9 +7,9 @@ date: 2021-01-09
 img: Project of the year Akash Jain.jpg
 thumbnail: Project of the year Akash Jain.jpg
 alt: image-alt
-project-date: January 2019
-client: Start Bootstrap
-category: Best Successful Project
+project-date: December 2018
+client: Samsung (SRI-D)
+category: Best Successful Project of the Year
 description: Based on the overall achievements & fast progress of our project, Me along with my teammates were awarded the Project of the year during the Annual Day celebrated at Samsung-Delhi.
 
 ---
