--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: December 2019
 client: Samsung
 category: Smart At Work
-description: Awarded Employee of the year for being Smart At Work for the year 2018 - 2019.
+description: Based on the achievements and smartly handling my project task as well as other POCs, was awarded Employee of the year for being "Smart At Work" for the year 2018 - 2019.
 
 ---
