--- a/css/2014-07-13-project-6.markdown
+++ b/css/2014-07-13-project-6.markdown
@@ -3,9 +3,9 @@ title: Round Icons
 subtitle: Graphic Design
 layout: default
 modal-id: 6
-date: 2014-07-15
+date: 2000-07-15
 img: roundicons.png
-thumbnail: roundicons-thumbnail.png
+thumbnail: ComingSoon.jpg
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
